--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ concepts such as representations and kernels.</p>
 <li>Felix A. Faber (University of Basel)</li>
 <li>Bing Huang (University of Basel)</li>
 <li>Lars A. Bratholm (University of Copenhagen)</li>
+<li>Jimmy C. Kromann (University of Basel</li>
 <li>Alexandre Tkatchenko (University of Luxembourg)</li>
 <li>Klaus-Robert Muller (Technische Universität Berlin/Korea University)</li>
 <li><ol class="first upperalpha" start="15">
